2/21/12 snap cuvette width to the closest 0.1cm interval when the user stops dragging
2/21/12 remove "pure water" from Beer's Law tab, it creates problems, and all solutions are pure water when concentration=0 [61532]
2/21/12 reduce cuvette height by 0.25 cm so that it's easier to drag detector probe around bottom of cuvette
2/21/12 add height to ruler model
2/21/12 design decision: don't change appear of arrow at min/max range of cuvette width
2/21/12 remove molar mass from model, it appears in design doc but isn't used for anything
2/21/12 use toggle button on light
2/21/12 make the light 40% taller, so we can increase the lens diameter
# 0.00.11 (61522) Feb 21, 2012
2/21/12 dev version for discussion of design issues with JC
2/20/12 beam segment to right of cuvette
2/20/12 beam segment in solution
2/20/12 fix divide-by-zero error for pure water
2/20/12 beam segment between light and cuvette
2/20/12 add lambdaMax to solution model
2/20/12 delete wavelength feature, too expensive to hide and continue to support [61509]
2/20/12 concentration slider
# 0.00.10 (61504) Feb 20, 2012
2/20/12 first dev version of "Concentration" flavor
2/20/12 add translucent background to label on dropper, so that labels are visible on all solution colors
2/20/12 first pass at concentration text field
2/17/12 make distance between light and cuvette something that's easy to measure (1.5cm)
2/17/12 add "Concentration" flavor to this project
2/16/12 use white text on detector
2/16/12 change Kool-Aid to "Drink mix"
2/16/12 add unlabeled major ticks to ruler at 1/2 cm increments
2/14/12 delete attempt at using HSliderNode node for concentration slider
2/14/12 add concentration slider, not wired up yet
2/14/12 add ruler to model, to take advantage of resetting its location on Reset All
2/14/12 flesh out concentration control a bit more
2/14/12 change units on concentration control to match appropriate units for specific solution
2/14/12 hide concentration control for pure water